objects/ssot__CaseParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AuthorizationProof__c</fullName>
        <label>Authorization Proof</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseParticipantRole__c</fullName>
        <label>Case Participant Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseParticipantStatus__c</fullName>
        <label>Case Participant Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseParticipant_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseParticipant_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CaseParticipant_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>CaseParticipant_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Participant Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreferredCommunicationMode__c</fullName>
        <label>Preferred Communication Mode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreferredContactEndTime__c</fullName>
        <label>Preferred Contact End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PreferredContactStartTime__c</fullName>
        <label>Preferred Contact Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718543583982_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseParticipant_ParticipantId_map_Ac_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CaseParticipant_ParticipantId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1718543583982_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718544750570_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseParticipant_ParticipantId_map_Ac_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>CaseParticipant_ParticipantId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1718544750570_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>